fix: navbar sidebar in dark mode and navbar

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -28,6 +28,7 @@ $sidebar-active: #282828;
   --ifm-color-primary-lightest: #700867;
   --ifm-navbar-height: 70px;
   --ifm-h2-font-size: 1.06rem;
+  --ifm-background-color: #ffffff;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
